test/grammar/schema/init/init_add_member_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:8:5
  |
8 |     fullName = "full name"
  |     ^ Cannot add member 'fullName' to schema 'Person'
  |